--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ header {
     padding: 20px;
     position: sticky;
     top: 0;
-    background-color: #fff;
+    background-color: white;
     z-index: 1;
 }
 .header__logo {
@@ -44,10 +44,7 @@ button{
 .about__sun-image{
     width: 100px;
     height: 100px;
-    animation: rotation;
-    animation-duration: 10s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
+    animation: rotation 10s infinite linear;
     position: absolute;
 }
 .about{
@@ -59,6 +56,7 @@ button{
     background: url('img/back.png') no-repeat;
     background-position: center;
     background-size: cover;
+    position: relative;
 }
 .about h1{
     font-size: 70px; /*размер шрифта*/
@@ -102,12 +100,9 @@ button{
     display:flex;
     flex-direction: column;
     text-align: left;
-    margin-top: 60px;
-    display: grid;
-    grid-gap: 20px;
+    
     
 }
-/* .form form записан код в группу не работает нужно найти решение*/
 .form form {
     margin-top: 60px;
     display: grid;
@@ -115,24 +110,17 @@ button{
 }
 .form label {
     font-size: 18px;
-    font-weight: 15px;
-    margin-bottom: 15px;
+    font-weight: 600;
+    margin-bottom: 20px;
 }
-.form input {
+.form input, .form select {
     font-size: 18px;
     color: #213053;
     height: 60px;
-    padding: 0 20 0 20;
+    padding: 0 20;
     border-radius: 15px;
     border: none;
-}
-.form select {
-    font-size: 18px;
-    color: #213053;
-    height: 60px;
-    padding: 0 20 0 20;
-    border-radius: 15px;
-    border: none;
+    outline: none;
 }
 .form__submit {
     font-size: 18px;
@@ -148,16 +136,15 @@ input {
 button:hover {
     background-color: #f6980c;
     box-shadow:0 16px 36px rgba(246 152 12/20%);
-    transition: background-color 0.3s;
-    transition: margin-right 1s ease-in;
+    transition: background-color 0.3s ease-in;
 }
 @keyframes rotation {
     0% {
-        transform: rotate(360deg);
+        transform: rotate(180deg);
     }
 }
 footer {
-    padding: 90px 20px 90px 20px;
+    padding: 90px 20px;
     font-size: 16px;
     font-weight: 600;
 }
@@ -175,14 +162,253 @@ footer {
     margin-right: 80px;
 
 }
-.footer__links h3 {
+.footer__links {
+    display: flex;
+    flex-direction: column;
+}
+footer h3 {
     font-size: 16px;
     opacity: 0.7;
     margin-bottom: 30px;
-    display: flex;
-    flex-direction: column;
-
 }
 .footer__links a {
     margin-bottom: 15px;
+}
+.features {
+    background-color: white;
+    padding: 115px 60px;
+}
+.cards {
+    display: grid;
+    grid-gap: 50px;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.card {
+    padding: 35px 40px 25px 40px;
+    border: 1px solid #D9E4E6;
+    background: #FFFFFF;
+    border-radius: 5px;
+}
+.card p {
+    font-size: 16px;
+    line-height: 22px;
+    opacity: 0.8;
+}
+.card__logo {
+    width: 100px;
+    height: 100px;
+    font-size: 32px;
+    font-weight: 700;
+    background-color: #eaeff9;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.card__logo.yellow {
+    color: #ffb406;
+}
+
+.card__logo.red {
+    color: #ad1714;
+}
+
+.card__logo.green {
+    color: #22a030;
+}
+.features__border {
+    width: 100%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    border: 1px solid #E6EAF4;
+}
+.features__feedback {
+    display:flex;
+}
+.features__feedback-left {
+    margin-right: 10px;
+}
+.features__feedback-left h2 {
+    font-size: 48px;
+}
+.features__feedback-left p {
+    font-size: 18px;
+    line-height: 26px;
+    opacity: 0.7;
+}
+.features__feedback-right {
+    display: flex;
+    align-items: center;
+}
+.features__box {
+    padding: 30px 40px 25px 40px;
+    border-radius: 25px;
+    color: white;
+}
+.features__box h3 {
+    margin-bottom: 20px;
+    margin-top: 0;
+    font-size: 48px;
+}
+.features__saving-box {
+    background-color: #dc5e26;
+    box-shadow: 0 6px 0 rgb(221 95 38/20%);
+    margin-right: 30px;
+}
+.features__rate-box {
+    background-color: #1d253a;
+    box-shadow: 0 6px 0 rgb(29 38 58/20%);
+}
+.stars {
+    color: #ff7039;
+}
+.promo {
+    display: flex;
+}
+.promo__image {
+    background-image: url(img/promo.jpg);
+    background-size: cover;
+    background-position: center;
+    width: 50%;
+    flex-shrink: 0;
+}
+.promo__right {
+    background-color: #dd5f26;
+    padding: 160px 60px;
+}
+.promo__text {
+    background-color: white;
+    padding: 30px 40px;
+    font-size: 20px;
+    line-height: 26px;
+    font-weight: 500;
+    border-radius: 25px;
+}
+.promo__text p::before {
+    content: '';
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    background-color: #ec6b29;
+    margin-right: 10px;
+    border-radius: 50%;
+}
+.promo__text p {
+    opacity: 80%;
+}
+.promo__text button {
+    background-color: #107b1c;
+    margin-top: 20px;
+    font-size: 18px;
+    font-weight: 600;
+    padding: 15px 30px;
+    box-shadow: 0 16px 36px rgb(16 122 28/30%);
+}
+.promo__button-wrap {
+    display: flex;
+    justify-content: center;
+}
+.promo__text button i {
+    font-size: 15px;
+    margin-left: 5px;
+}
+.orb-canvas {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+}
+
+/*Планшеты*/
+
+@media (max-width: 1024px) {
+    .about {
+        padding: 115px 20px;
+    }
+    .about h1 {
+        font-size: 36px;
+        line-height: 40px;
+    }
+    .about__image {
+        width: 280px;
+    }
+    .about__sun-image {
+        width: 75px;
+        height: 75px;
+    }
+}
+
+/*Мобильные устройства*/
+
+@media (max-width: 720px) {
+    header {
+        padding: 10px;
+    }
+    .header__logo {
+        height: 20px;
+    }
+    header a {
+        margin-right: 10px;
+    }
+    .about {
+        flex-direction: column-reverse;
+        padding: 50px 10px;
+    }
+    .about h1 {
+        font-size: 36px;
+        line-height: 40px;
+    }
+    .about__image {
+        width: 280px;
+    }
+    .about__sun-image {
+        width: 75px;
+        height: 75px;
+    }
+    .form {
+        padding: 50px 10px;
+    }
+    .form h1 {
+        font-size: 36px;
+    }
+    footer {
+        padding: 50px 10px;
+    }
+    .footer__container {
+        flex-direction: column;
+    }
+    .features {
+        padding: 50px, 10px;
+    }
+    .cards {
+        grid-template-columns: auto;
+    }
+    .features__feedback {
+        flex-direction: column;
+        
+    }
+    .features__feedback-left {
+        margin-right: 0;
+    }
+    .features__feedback-left h2, .features__box h3 {
+        font-size: 36px;
+    }
+    .features__feedback-right {
+        flex-direction: column;
+        align-items: initial;
+    }
+    .features__saving-box {
+        margin-bottom: 30px;
+        margin-right: 0;
+    }
+    .promo {
+        flex-direction: column-reverse;
+    }
+    .promo__image {
+        height: 500px;
+        width: 100%;
+    }
+    .promo__right {
+        padding: 50px 10px;
+    }
 }
